fixed flash bugs, and alignment of rank status

--- a/public/css/rektmain.css
+++ b/public/css/rektmain.css
@@ -77,7 +77,7 @@ body {
 }
 
 .logofield {
-	margin-top: 200px;
+	margin-top: 170px;
 	margin-right: auto;
 	margin-bottom: auto;
 	margin-left: auto;
